# NerualNetworkCpp

cpp/: .gitignore  CMakeLists.txt  benchmark  benchmark.cc  bias.cc  bias.h  bias.tcc  layer.h  linear.cc  linear.h  linear.tcc  main.cc  matrix.cc  matrix.h  matrix.tcc  mnist.cc  mnist.h  model.cc  model.h  model.tcc  relu.h  relu.tcc  softmax.h  softmax.tcc
cpp/data/: readme.md
python/: main.py
